--- a/refinedSearch.html
+++ b/refinedSearch.html
@@ -1,5 +1,5 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title> Find a Perfect car for You!!!!</title>
@@ -9,12 +9,13 @@
 
     font-size: 20px;
   }
-  h2{
-    display: none;
-  }
+
   </style>
   </head>
   <body bgcolor="pink">
+    {% if message == "fail" %}
+    <h1>Cars NOT FOUND!!</h1>
+    {% endif %}
     <h2>{{message}}</h2>
     <h1 align=center><u>ENTER THE CAR FEATURE BELOW FOR SEARCH</u></h1>
 
@@ -23,13 +24,15 @@
       <br/>
       Manufacturer:<input type="text" name="man_search">
       <br/>
-      Battery Size:<input type="text" name="Bat_search">
+      Year range Min:<input type="text" name="yr_min_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">&nbsp;Max:<input type="text" name="yr_max_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
       <br>
-      WLTP range Min:<input type="text" name="Wltp_min_search">&nbsp;Max:<input type="text" name="Wltp_max_search">
+      Battery Size Min:<input type="text" name="Bat_min_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">&nbsp;Max:<input type="text" name="Bat_max_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
       <br>
-      Max Cost:<input type="text" name="Cost_search"> <!--Max (so less than vlaue of text box)-->
+      WLTP range Min:<input type="text" name="Wltp_min_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">&nbsp;Max:<input type="text" name="Wltp_max_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
       <br>
-      Max Power:<input type="text" name="Power_search"><!--Max (so less than vlaue of text box)-->
+      Costrange Min:<input type="text" name="Cost_min_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">&nbsp;Max:<input type="text" name="Cost_max_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');"> <!--Max (so less than vlaue of text box)-->
+      <br>
+      Powerrange Min:<input type="text" name="Power_min_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');">&nbsp;Max:<input type="text" name="Power_max_search" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><!--Max (so less than vlaue of text box)-->
       <br>
       <!--Name:<input type="text" name="search">-->
 
@@ -46,30 +49,41 @@
             </tr>
     	      {% endfor %}
       </table>-->
+      <table border= 1px solid #ddd align=center>
+        <th>LIST OF EVs</th>
+          {% for ev in all_keys %}
+          <tr>
+          <td align=center><b><a href="/Display?name={{ev.evName}}" style="color: #080801">{{ev.evName}}</b></td>
+          </td>
+          </tr>
+  	      {% endfor %}
+        </table>
 
-     {% if message == "success" %}
+    <!-- {% if message == "success" %}
           <h1>Car Found</h1>
 
         <table border= 1px solid align=center>
       <th>LIST OF EVs</th>
-        {% for ev in all_keys %}
+        {% for ev in check %}
         <tr>
         <td align=center><b>{{EV.evName}}</b></td>
         </td>
         </tr>
 	      {% endfor %}
-      </table>
+      </table> -->
 
 
         <div id="search">
           <!--<h1><a href="/Display">{{EV.evName}}</a></h1>
         <h1><a href="/Display?name={{EV.evName}}">{{EV.evName}}</a></h1>-->
-        <h1><a href="/Display.html={{EV.evName}}">{{EV.evName}}</a></h1>
+        {% for ev in all_keys  %}
+        <h1><a href="/EV?evName={{EV.evName}}">{{EV.evName}}</a></h1>
+        {% endfor %}
         </div>
 
-        {% elif message == "fail" %}
+        <!--{% elif message == "fail" %}
         <h1>Cars NOT FOUND!!</h1>
-        {% endif %}
+        {% endif %}-->
     </form>
     <br/>
 
