--- a/main.html
+++ b/main.html
@@ -34,5 +34,7 @@
 <p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
 <!--<p align=center style="font-size:20px;">To compare GPUs please <a href="/compare" >click here</a><br/></p>-->
 <p align=center style="font-size:20px;">To search the list of EVs based on specific feature please <a href="/refinedSearch">click here</a><br/></p>
+<p align=center style="font-size:20px;">To Compare EV's please <a href="/compare">click here</a><br/></p>
+
 </body>
 </html>
