--- a/Display.html
+++ b/Display.html
@@ -23,6 +23,8 @@ form{
     EV_Cost:<b>{{ev.evCost}}</b><br>
     EV_Power:<b>{{ev.evPower}}</b><br>
     <a href="\edit?evName={{ev.evName}}">EDIT</a>
+    <a href="\review?evName={{ev.evName}}">Review</a>
+
   </form>
 
     </body>
