--- a/main.html
+++ b/main.html
@@ -4,11 +4,8 @@
 <title>User login/logout</title>
 </head>
 <body>
+  <p>Welome {{username}} to the application, you can logout <a href="{{logout_url}}"> here</a></p>
   <h2 align=center><u>{{message}}</u></h2>
-
-  {% if user %}
-<p>Hello {{ user.email() }} welcome to the application</p>
-<h3 align=center><u>{{message}}</u></h3>
 <form  action="/" method="post" >
 
       Name: <input type="text" name="evName" required>
@@ -28,13 +25,11 @@
       <br/>
       <input type="submit" name="button" value="Add EV">
     </form>
-  {% else %}
-<p>Hello guest welcome to the application</p>
-{% endif %}
-<p>you can {{ url_string }} <a href='{{ url }}'>here</a></p>
+
 <!--<p align=center style="font-size:20px;">To compare GPUs please <a href="/compare" >click here</a><br/></p>-->
 <p align=center style="font-size:20px;">To search the list of EVs based on specific feature please <a href="/refinedSearch">click here</a><br/></p>
 <p align=center style="font-size:20px;">To Compare EV's please <a href="/compare">click here</a><br/></p>
+<!--<p align=center style="font-size:20px;">To  Review EV's please <a href="/review">click here</a><br/></p>-->
 
 </body>
 </html>
