--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
 <!--<p align=center style="font-size:20px;">To compare GPUs please <a href="/compare" >click here</a><br/></p>-->
 <p align=center style="font-size:20px;">To search the list of EVs based on specific feature please <a href="/refinedSearch">click here</a><br/></p>
 <p align=center style="font-size:20px;">To Compare EV's please <a href="/compare">click here</a><br/></p>
+<p align=center style="font-size:20px;">For ratings please press <a href="/info">click here</a><br/></p>
 <!--<p align=center style="font-size:20px;">To  Review EV's please <a href="/review">click here</a><br/></p>-->
 
 </body>
