--- a/compareCars.html
+++ b/compareCars.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title></title>
    </head>
-   <body bgcolor="#ADD8E6">
+   <body bgcolor="pink">
      <a href="/">HOME</a>
      <h2 align=center><u>CARs COMPARISON BETWEEN <b>{{ev2.key.id()}} vs {{ev1.key.id()}}</u> </h2><br/>
 
