--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
   </head>
   <body align=center bgcolor="pink">
     <form method="post" action="/info">
-    <a href="/"align=center>HOME</a>
+    <a href="/"align=center>HOME</a><br>
     Click here to view the reviews of all cars<input type="submit" name="button" value="Retrive">
     <table border= 1px solid #ddd align=center>
       <th>LIST OF EVs</th>
