--- a/refinedSearch.html
+++ b/refinedSearch.html
@@ -38,8 +38,8 @@
 
         <input type="submit" name="button" value="Search">
         <!-- <input type="submit" name="button" value="COMPARE"> -->
-        <input type="submit" name="button" value="CANCEL">
-          
+        <input type="submit" name="button" value="Cancel">
+
 
         <!--   <table border= 1px solid #ddd align=center>
           <th>LIST OF EVs</th>
