--- a/main.html
+++ b/main.html
@@ -23,19 +23,19 @@
       DateIssued: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evDateIssued" align="center" required>
       <br/>
       <!--Battery Size:<input type="number" name="evBatterysize" required>-->
-      Battery Size: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evBatterysize" align="center" required>
+      Battery Size: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evBatterysize" align="center" required>Kwh
       <br/>
-      WLTP range: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evWLTPrange" align="center" required>
+      WLTP range: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evWLTPrange" align="center" required>Km
       <br/>
       Cost: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evCost" align="center" required>
       <br/>
-      Power: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evPower" align="center" required>
+      Power: <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" name="evPower" align="center" required>Kw
       <br/>
       <input type="submit" name="button" value="Add EV">
-      
+
     </form>
 
-<!--<p align=center style="font-size:20px;">To compare GPUs please <a href="/compare" >click here</a><br/></p>-->
+
 <p align=center style="font-size:20px;">To search the list of EVs based on specific feature please <a href="/refinedSearch">click here</a><br/></p>
 <p align=center style="font-size:20px;">To Compare EV's please <a href="/compare">click here</a><br/></p>
 <p align=center style="font-size:20px;">For ratings please press <a href="/info">click here</a><br/></p>
